# rank-estimation

code/: CMakeLists.txt  README.md  README_CPP.md  build_and_run.sh  main_loop_tests.py  optimized_main_loop.py  pipeline.py  rank_analysis.py  rank_pipeline.cpp  requirements.txt  tet_mem.ipynb  vectorized_optimization.py
code/images/: rank_analysis_results.csv
